--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ControlDeMarcaciones/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ControlDeMarcaciones/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @model Core.Erp.Info.Helps.cl_filtros_Info
 @{
-    ViewBag.Title = "Pagos en cheques";
+    ViewBag.Title = "Control de marcaciones";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
