--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/RubrosCalculados/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/RubrosCalculados/Index.cshtml
@@ -500,6 +500,56 @@
         <div class="col-md-12">
             <div class="col-md-4">
                 <div class="form-group">
+                    <label for="IdRubro_prov_vac">Rubro horas adicionales*</label>
+                    @Html.DevExpress().ComboBoxFor(q => q.IdRubro_horas_adicionales, settings =>
+               {
+                   settings.Name = "IdRubro_horas_adicionales";
+                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                   settings.Properties.Columns.Add("ru_codRolGen", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                   settings.Properties.Columns.Add("ru_descripcion", "Rubro").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+
+                   //Campo ID
+                   settings.Properties.ValueField = "IdRubro";
+                   settings.Properties.ValueType = typeof(string);
+                   settings.Properties.TextField = "ru_descripcion";
+                   //Boton para seleccionar ningun registro
+                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                   settings.Properties.NullText = "== Seleccione ==";
+                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+
+               }).BindList(ViewBag.lst_rubro).GetHtml()
+                    @Html.ValidationMessageFor(q => q.IdRubro_horas_adicionales, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="IdRubro_prov_vac">Rubro horas control salida*</label>
+                    @Html.DevExpress().ComboBoxFor(q => q.IdRubro_horas_control_salida, settings =>
+               {
+                   settings.Name = "IdRubro_horas_control_salida";
+                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                   settings.Properties.Columns.Add("ru_codRolGen", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                   settings.Properties.Columns.Add("ru_descripcion", "Rubro").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+
+                   //Campo ID
+                   settings.Properties.ValueField = "IdRubro";
+                   settings.Properties.ValueType = typeof(string);
+                   settings.Properties.TextField = "ru_descripcion";
+                   //Boton para seleccionar ningun registro
+                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                   settings.Properties.NullText = "== Seleccione ==";
+                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+
+               }).BindList(ViewBag.lst_rubro).GetHtml()
+                    @Html.ValidationMessageFor(q => q.IdRubro_horas_control_salida, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
                     <label for="IdRubro_prov_vac">Rubro horas recargo*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdRubro_horas_recargo, settings =>
                {
@@ -520,32 +570,6 @@
 
                }).BindList(ViewBag.lst_rubro).GetHtml()
                     @Html.ValidationMessageFor(q => q.IdRubro_horas_recargo, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-
-            <div class="col-md-4">
-                <div class="form-group">
-                    <label for="IdRubro_prov_vac">Rubro horas extras*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdRubro_horas_extras, settings =>
-               {
-                   settings.Name = "IdRubro_horas_extras";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("ru_codRolGen", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("ru_descripcion", "Rubro").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-
-                   //Campo ID
-                   settings.Properties.ValueField = "IdRubro";
-                   settings.Properties.ValueType = typeof(string);
-                   settings.Properties.TextField = "ru_descripcion";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-               }).BindList(ViewBag.lst_rubro).GetHtml()
-                    @Html.ValidationMessageFor(q => q.IdRubro_horas_extras, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
