--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Anular.cshtml
@@ -27,12 +27,7 @@
     @Html.HiddenFor(q => q.IdEmpleado);
     <div class="row">
         <div class="col-md-12">
-
-
             <div class="col-md-2">
-
-
-
                 <script type="text/javascript">
                     function onUploadControlFileUploadComplete(s, e) {
                         if (e.isValid)
@@ -80,6 +75,7 @@
                    settings.AdvancedModeSettings.EnableMultiSelect = false;
                    settings.AdvancedModeSettings.ExternalDropZoneID = "externalDropZone";
                    settings.AdvancedModeSettings.DropZoneText = "";
+                   settings.ValidationSettings.MaxFileSize = 4194304;
                    settings.ValidationSettings.AllowedFileExtensions = new string[] { ".jpg", ".jpeg", ".gif", ".png" };
                    settings.ValidationSettings.ErrorStyle.CssClass = "validationMessage";
                    settings.ClientSideEvents.FilesUploadStart = "function(s,e){nombre_imagen();}";
@@ -142,7 +138,7 @@
             </div>
         </div>
     </div>
-    
+
     <div id="Tabs" role="tabpanel">
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
@@ -158,7 +154,9 @@
             <li>
                 <a href="#tb_info_adicional" aria-controls="AdministracionPreBajas" role="tab" data-toggle="tab">Información adicional</a>
             </li>
-
+            <li>
+                <a href="#tb_info_pago_hora" aria-controls="AdministracionPreBajas" role="tab" data-toggle="tab">Información pago en horas</a>
+            </li>
         </ul>
         <!-- Tab panes -->
         <div class="tab-content" style="padding-top: 20px">
@@ -181,7 +179,6 @@
                                    settings.Properties.TextField = "Descripcion_Ciudad";
                                    //Boton para seleccionar ningun registro
                                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                                   settings.Properties.NullText = "== Seleccione ==";
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_ciudad).GetHtml()
@@ -285,7 +282,6 @@
                                    settings.Properties.TextField = "ba_descripcion";
                                    //Boton para seleccionar ningun registro
                                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                                   settings.Properties.NullText = "== Seleccione ==";
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_banco).GetHtml()
@@ -331,7 +327,6 @@
                                    settings.Properties.TextField = "Su_Descripcion";
                                    //Boton para seleccionar ningun registro
                                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                                   settings.Properties.NullText = "== Seleccione ==";
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                                }).BindList(ViewBag.lst_sucursal).GetHtml()
                                 @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
@@ -353,7 +348,6 @@
                                    settings.Properties.TextField = "ca_descripcion";
                                    //Boton para seleccionar ningun registro
                                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                                   settings.Properties.NullText = "== Seleccione ==";
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_cargo).GetHtml()
@@ -376,7 +370,6 @@
                                    settings.Properties.TextField = "Empleado";
                                    //Boton para seleccionar ningun registro
                                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                                   settings.Properties.NullText = "== Seleccione ==";
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_empleado).GetHtml()
@@ -406,7 +399,6 @@
                                    settings.Properties.TextField = "Descripcion";
                                    //Boton para seleccionar ningun registro
                                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                                   settings.Properties.NullText = "== Seleccione ==";
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_division).GetHtml()
@@ -430,7 +422,6 @@
                                    settings.Properties.TextField = "Descripcion";
                                    //Boton para seleccionar ningun registro
                                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                                   settings.Properties.NullText = "== Seleccione ==";
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_area).GetHtml()
@@ -454,7 +445,6 @@
                                    settings.Properties.TextField = "de_descripcion";
                                    //Boton para seleccionar ningun registro
                                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                                   settings.Properties.NullText = "== Seleccione ==";
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_departamento).GetHtml()
@@ -480,7 +470,7 @@
                         </div>
                         <div class="col-md-2">
                             <div class="form-group">
-                                <label for="IdHorario">Horario</label>
+                                <label for="IdHorario">Horario*</label>
                                 @Html.DevExpress().ComboBoxFor(q => q.IdHorario, settings =>
                                {
                                    settings.Name = "IdHorario";
@@ -493,7 +483,6 @@
                                    settings.Properties.TextField = "HoraIni";
                                    //Boton para seleccionar ningun registro
                                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                                   settings.Properties.NullText = "== Seleccione ==";
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_horario).GetHtml()
@@ -550,71 +539,10 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="col-md-2">
-                            <div class="form-group">
-                                <label for="Pago_por_horas"></label>
-                                @Html.DevExpress().CheckBoxFor(q => q.Pago_por_horas, settings =>
-                           {
-                               settings.Name = "Pago_por_horas";
-                               settings.Text = "Pago por horas";
-                               settings.Properties.ClientSideEvents.CheckedChanged = "function(s,e){mostrar_horas();}";
-                           }).GetHtml()
-                                @Html.ValidationMessageFor(q => q.Pago_por_horas, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div id="DivPagoHoras">
-
-                            <div class="col-md-2">
-                                <div class="form-group">
-                                    <label for="Valor_horas">Valor hora vespertina</label>
-                                    @Html.TextBoxFor(q => q.Valor_horas_vespertina, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(q => q.Valor_horas_vespertina, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                            <div class="col-md-2">
-                                <div class="form-group">
-                                    <label for="Valor_maximo_horas">Horas máxima vespertina</label>
-                                    @Html.TextBoxFor(q => q.Valor_maximo_horas_vesp, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(q => q.Valor_maximo_horas_vesp, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                            <div class="col-md-2">
-                                <div class="form-group">
-                                    <label for="Valor_horas">Valor hora matutina</label>
-                                    @Html.TextBoxFor(q => q.Valor_horas_matutino, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(q => q.Valor_horas_matutino, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                            <div class="col-md-2">
-                                <div class="form-group">
-                                    <label for="Valor_maximo_horas">Horas máxima matutina</label>
-                                    @Html.TextBoxFor(q => q.Valor_maximo_horas_mat, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(q => q.Valor_maximo_horas_mat, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                            <div class="col-md-2">
-                                <div class="form-group">
-                                    <label for="Valor_horas">Valor hora brigada</label>
-                                    @Html.TextBoxFor(q => q.Valor_horas_brigada, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(q => q.Valor_horas_brigada, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
 
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="col-md-2">
-                            <div class="form-group">
-                                <label for="Valor_horas">Valor hora extra</label>
-                                @Html.TextBoxFor(q => q.Valor_horas_extras, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(q => q.Valor_horas_extras, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
+
 
                         <div class="col-md-2">
                             <div class="form-group">
@@ -680,6 +608,7 @@
                     </div>
                 </div>
 
+
             </div>
 
             <div role="tabpanel" class="tab-pane" id="tb_info_adicional">
@@ -700,7 +629,6 @@
                                    settings.Properties.TextField = "ca_descripcion";
                                    //Boton para seleccionar ningun registro
                                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                                   settings.Properties.NullText = "== Seleccione ==";
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_tipo_discapacidad).GetHtml()
@@ -741,7 +669,6 @@
                                    settings.Properties.TextField = "ca_descripcion";
                                    //Boton para seleccionar ningun registro
                                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                                   settings.Properties.NullText = "== Seleccione ==";
                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
                                }).BindList(ViewBag.lst_tipo_doc_sustutuido).GetHtml()
@@ -813,6 +740,86 @@
             </div>
 
 
+            <div role="tabpanel" class="tab-pane" id="tb_info_pago_hora">
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="Pago_por_horas"></label>
+                                @Html.DevExpress().CheckBoxFor(q => q.Pago_por_horas, settings =>
+                           {
+                               settings.Name = "Pago_por_horas";
+                               settings.Text = "Pago por horas";
+                               settings.Properties.ClientSideEvents.CheckedChanged = "function(s,e){mostrar_horas();}";
+                           }).GetHtml()
+                                @Html.ValidationMessageFor(q => q.Pago_por_horas, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div id="DivPagoHoras">
+
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label for="Valor_horas">Valor hora vespertina</label>
+                                    @Html.TextBoxFor(q => q.Valor_horas_vespertina, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.Valor_horas_vespertina, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label for="Valor_maximo_horas">Horas máxima vespertina</label>
+                                    @Html.TextBoxFor(q => q.Valor_maximo_horas_vesp, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.Valor_maximo_horas_vesp, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label for="Valor_horas">Valor hora matutina</label>
+                                    @Html.TextBoxFor(q => q.Valor_horas_matutino, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.Valor_horas_matutino, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label for="Valor_maximo_horas">Horas máxima matutina</label>
+                                    @Html.TextBoxFor(q => q.Valor_maximo_horas_mat, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.Valor_maximo_horas_mat, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label for="Valor_horas">Valor hora brigada</label>
+                                    @Html.TextBoxFor(q => q.Valor_horas_brigada, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.Valor_horas_brigada, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label for="Valor_horas">Valor hora adicionales</label>
+                                    @Html.TextBoxFor(q => q.Valor_hora_adicionales, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.Valor_hora_adicionales, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label for="Valor_horas">Valor hora control salida</label>
+                                    @Html.TextBoxFor(q => q.Valor_hora_control_salida, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.Valor_hora_control_salida, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+
+                <div class="row">
+
+                </div>
+            </div>
+
 
         </div>
     </div>
@@ -837,6 +844,7 @@
     $("#pe_cedulaRuc").keyup(function () {
         validar();
     });
+
     function validar() {
         var tipo_doc = $("#IdTipoDocumento").val();
         var cedula = $("#pe_cedulaRuc").val();
@@ -882,7 +890,7 @@
 
     function nombre_imagen() {
         var datos = {
-            IdEmpleado: $("#IdEmpleado").val()
+            IdEmpresa: $("#IdActivoFijo").val()
         }
         $.ajax({
             type: 'POST',
@@ -905,7 +913,7 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("actualizar_div", "ActivoFijo", new { Area = "ActivoFijo" })',
+            url: '@Url.Action("nombre_imagen", "Empleado", new { Area = "RRHH" })',
             async: false,
             bDeferRender: true,
             bProcessing: true,
@@ -922,5 +930,6 @@
                     }
                 });
     }
+
 
 </script>
